# eye-declare

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: docs.yml
.planning/: DESIGN.md
crates/eye_declare/: Cargo.toml
crates/eye_declare/examples/: agent_sim.rs  app.rs  chat.rs  declarative_aspirational.rs.txt  growing.rs  interactive.rs  lifecycle.rs  mount_rerender.rs  nested.rs  terminal_demo.rs
crates/eye_declare/src/: app.rs  component.rs  context.rs  frame.rs  hooks.rs  inline.rs  insets.rs  lib.rs  node.rs  renderer.rs  terminal.rs
crates/eye_declare/src/components/: markdown.rs  spinner.rs  text.rs
crates/eye_declare/tests/: element_macro.rs
crates/eye_declare_macros/: Cargo.toml
crates/eye_declare_macros/src/: codegen.rs  component.rs  lib.rs  parse.rs  props.rs
docs/content/: index.md
docs/content/guide/: application.md  components.md  context.md  events-and-focus.md
docs/content/reference/: imperative-api.md
docs/scripts/: install-undox.sh
examples/: agent_sim.rs  app.rs  declarative.rs  growing.rs  interactive.rs  markdown_demo.rs  terminal_demo.rs  wrapping.rs
scripts/: release
src/: app.rs  component.rs  element.rs  escape.rs  inline.rs  lib.rs  node.rs  renderer.rs  terminal.rs
src/components/: markdown.rs  mod.rs
src/elements/: markdown.rs  spinner.rs  text.rs  vstack.rs
