[package]
name = "eye_declare"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui-core = "0.1"
ratatui-widgets = { version = "0.3", features = [
  "unstable-rendered-line-info",
] }
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
futures = "0.3"
eye_declare_macros = { path = "../eye_declare_macros", optional = true }

[features]
default = ["macros"]
macros = ["dep:eye_declare_macros"]
